# yagna_provider_testground

./: .gitignore  config.json  config_linux.json
common/: common.py
knowledge_base/: cleanup_transactions.txt
provider_run_config/: .env  .env.template  README.md  config.json  config_linux.json  step0_setup_env.py  step1_run_yagna.py  step2_run_provider.py
provider_run_config/plugins/: ya-runtime-vm.json  ya-runtime-wasi.json
provider_run_config/pluginslinux/ya-runtime-vm/: ya-runtime-vm
provider_run_config/provider_dir/: globals.json  hardware.json  presets.json
requestor_run_config/: .env  .env.template  config.json  config_linux.json  step0_setup_env.py  step3_run_yagna.py  step4_readme.md
runtime_central_net/: run_centralnet.py
runtime_provider/: .env.template  step0_setup_env.py  step1_run_yagna.py
runtime_requestor/: .env.template  step0_setup_env.py  step3_run_yagna.py  step4_readme.md
runtime_service_provider/: step0_setup_env.py  step1_run_yagna.py  step2_run_provider.py
runtime_service_provider/plugins/: ya-runtime-bor.json
runtime_service_provider/provider_dir/: presets.json
yapapi-bor-service/: __init__.py  ctx.py  discovery.py  display.py  glmminingestimator.py  gminer.py  pyproject.toml
yapapi-http-auth/: common.py  http_auth.py  pyproject.toml  utils.py
yapapi-volumes-benchmark/: Readme.md  pyproject.toml  vol_test.py  vol_test_sent_to_provider.py  volume_benchmark.py
yapapi-volumes-benchmark/docker_image/: Dockerfile  vol_test.py
yapapi_run_config/: extract_yagna_appkey.py
(+4 files in other folders)
