[tool.poetry]
name = "yapapi-bor-service"
version = "0.1.0"
description = ""
authors = ["scx1332 <sieciech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
yapapi = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
